[gd_scene load_steps=4 format=3 uid="uid://di82eaqva88r5"]

[ext_resource type="PackedScene" uid="uid://b472rl8vw03d5" path="res://entities/enemies/enemy.tscn" id="1_nr1ry"]
[ext_resource type="Script" path="res://entities/enemies/weed_enemy.gd" id="2_27j20"]
[ext_resource type="PackedScene" uid="uid://cw53ytdirejx2" path="res://entities/enemies/weed/weed_guy.tscn" id="2_ff7cg"]

[node name="weed_enemy" instance=ExtResource("1_nr1ry")]
collision_layer = 5
collision_mask = 4
script = ExtResource("2_27j20")

[node name="temp_face" parent="mesh" index="0"]
visible = false

[node name="health" parent="mesh" index="1"]
visible = false

[node name="NavigationAgent3D" parent="." index="1"]
target_desired_distance = 2.0

[node name="attack_timer" parent="timers" index="1"]
one_shot = true

[node name="cool_down_timer" parent="timers" index="2"]
wait_time = 0.8
one_shot = true

[node name="carrot_growth_3" parent="." index="4"]
visible = false

[node name="weed_idles" parent="." index="5" instance=ExtResource("2_ff7cg")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
